Foreword enter button displayed on tablet. Work UI covers a:hover sensitivity fixed. Bio UI scroll bug in afterword image fixed. JS Cursor enabled for deploy.

--- a/app/scss/modules/_project-cover.scss
+++ b/app/scss/modules/_project-cover.scss
@@ -136,7 +136,7 @@
 		}
 	}
 
-	&:hover{
+	a:hover{
 		.photo-wrap{
 			img{
 				// opacity: 1;
