--- a/app/scss/views/_foreword.scss
+++ b/app/scss/views/_foreword.scss
@@ -221,6 +221,12 @@
 			}
 
 			@include desktop {
+				position: absolute;
+				bottom: 0;
+				right: -25vw;
+			}
+
+			@include bigdesktop {
 				display: none;
 			}
 		}
